2011-05-13  Ivan Maidanski  <ivmai@mail.ru>

	* dyn_load.c (GC_FirstDLOpenedLinkMap): Remove unused "r" local
	variable.
	* pthread_support.c (GC_unregister_my_thread_inner): Revert back
	GC_remove_specific invocation; add a comment.
	* include/private/thread_local_alloc.h (GC_remove_specific):
	Revert back.
	* specific.c: Expand all tabs to spaces.
	* specific.c (slow_getspecific): Cast qtid to AO_t.
	* include/private/specific.h (quick_thread_id): Reformat comment.
	* include/private/specific.h (key_create, setspecific,
	remove_specific): Remove "extern" keyword.
	* include/private/specific.h (getspecific): Change type of "qtid"
	local variable to unsigned long.

2011-05-11  Ivan Maidanski  <ivmai@mail.ru>

	* pthread_support.c (GC_check_tls): Fix "#endif" comment.
	* include/gc.h (GC_REDIRECT_TO_LOCAL): Remove deprecated comment.
	* include/private/thread_local_alloc.h (THREAD_LOCAL_ALLOC):
	Remove redundant test of the macro.
	* include/private/thread_local_alloc.h: Reformat the code.

2011-05-11  Ivan Maidanski  <ivmai@mail.ru>

	* backgraph.c (add_edge): Recognize DEBUG_PRINT_BIG_N_EDGES macro.
	* os_dep.c (GC_set_and_save_fault_handler): Recognize
	SIGACTION_FLAGS_NODEFER_HACK macro.
	* pthread_support.c (mark_mutex): Recognize GLIBC_2_1_MUTEX_HACK
	macro.
	* pthread_support.c (GC_acquire_mark_lock): Remove commented out
	code.
	* include/gc_inline.h (GC_MALLOC_WORDS, GC_MALLOC_ATOMIC_WORDS,
	GC_CONS): Remove trailing space (before back-slash).
	* include/private/gc_hdrs.h (GET_BI, GET_HDR_ADDR): Ditto.
	* include/private/gc_pmark.h (PUSH_OBJ, PUSH_CONTENTS,
	SET_MARK_BIT_EXIT_IF_SET, LONG_MULT, PUSH_CONTENTS_HDR,
	GC_PUSH_ONE_STACK, GC_PUSH_ONE_HEAP): Ditto.
	* include/private/thread_local_alloc.h (GC_key_create): Ditto.
	* include/private/gc_priv.h (SUNOS5SIGS): Don't include
	sys/siginfo.h on Linux.
	* include/private/gcconfig.h: Reformat comments (and some code).
	* include/private/gcconfig.h (FORCE_WRITE_PREFETCH): New macro